--- a/index.html
+++ b/index.html
@@ -2,18 +2,19 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>ReactJS Boilerplate</title>
+		<title>Instagram Feed</title>
 		<script src="node_modules/babel-core/browser-polyfill.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
-		
 		<link rel="stylesheet" type="text/css" href="styles/css/style.css">
 	</head>
 	
 	<body>
 		
-		
+		<canvas id = "starrynight"></canvas>
+			
 		<div id = "content"></div>
 		<script type="text/javascript" src="src/js/bundle.js"></script>
 
+		
 	</body>
 </html>
