added user ability to insert defualt parameters via form

--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
 		<script src="node_modules/babel-core/browser-polyfill.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
 		<link rel="stylesheet" type="text/css" href="styles/css/style.css">
+		<link href='https://fonts.googleapis.com/css?family=Dancing+Script:700,400' rel='stylesheet' type='text/css'>
 	</head>
 	
 	<body>
+		<div class = "banner-wrapper">
+			<h1 class = "title-banner">Freddy and Amy 2015!</h1>
+		</div>
 		
 		<canvas id = "starrynight"></canvas>
 			
